trunk/Archive2/39/1d9f30a4201335/output
main.cpp:13:21: error: array of abstract class type 'abstract'
    bar(templ<U[], T[]>) {}
                    ^
main.cpp:18:19: note: in instantiation of template class 'bar<abstract>' requested here
    bar<abstract> x;
                  ^
main.cpp:3:18: note: unimplemented pure virtual method 'foo' in 'abstract'
    virtual void foo() = 0;
                 ^
1 error generated.
